fix @each code in spacing helper

--- a/src/utils/_spacing.scss
+++ b/src/utils/_spacing.scss
@@ -13,28 +13,24 @@ $spacing: (
 );
 $sides: (t: top, r: right, b: bottom, l: left);
 
-@each $spacing-prefix in $spacing-pre-fixes {
-  @each $size-prefix, $size-value in $spacing {
-    %_m#{$size-prefix} {
-      margin: #{$size-value};
-    }
-    @each $side-prefix, $side-long-name in $sides {
-      %_m#{$side-prefix}#{$size-prefix} {
-        margin-#{$side-long-name}: #{$size-value};
-      }
+@each $size-prefix, $size-value in $spacing {
+  %_m#{$size-prefix} {
+    margin: #{$size-value};
+  }
+  @each $side-prefix, $side-long-name in $sides {
+    %_m#{$side-prefix}#{$size-prefix} {
+      margin-#{$side-long-name}: #{$size-value};
     }
   }
 }
 
-@each $spacing-prefix in $spacing-pre-fixes {
-  @each $size-prefix, $size-value in $spacing {
-    %_p#{$size-prefix} {
-      padding: #{$size-value};
-    }
-    @each $side-prefix, $side-long-name in $sides {
-      %_p#{$side-prefix}#{$size-prefix} {
-        padding-#{$side-long-name}: #{$size-value};
-      }
+@each $size-prefix, $size-value in $spacing {
+  %_p#{$size-prefix} {
+    padding: #{$size-value};
+  }
+  @each $side-prefix, $side-long-name in $sides {
+    %_p#{$side-prefix}#{$size-prefix} {
+      padding-#{$side-long-name}: #{$size-value};
     }
   }
 }
